[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["shreyas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde_json = "1.0.64"
home = "0.5.3"
anyhow = "1.0.40"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]